gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/link_com_estrutura_passo.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346676132474" ID="ID_1656020112" MODIFIED="1346676135371" TEXT="MM">
<node CREATED="1346676136213" ID="ID_944912032" MODIFIED="1346676189595" POSITION="right" TEXT="UC: UC1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346676192119" ID="ID_987968288" MODIFIED="1346676240077" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1">
<icon BUILTIN="forward"/>
</node>
</node>
</node>
</map>
